--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,12 +1,15 @@
 <nav class="uk-navbar-container" uk-navbar>
   <div class="uk-navbar-left">
     <ul class="uk-navbar-nav">
-      <li class="uk-active"><a href="#">Strapi blog</a></li>
+      <li class="uk-active"><a routerLink="/">Strapi blog</a></li>
     </ul>
   </div>
 
   <div class="uk-navbar-right">
     <ul *ngIf="data" class="uk-navbar-nav">
+      <li>
+        <a routerLink="/movies">Movies</a>
+      </li>
       <li *ngFor="let category of data.categories" class="uk-active">
         <a routerLink="/category/{{ category.id }}" routerLinkActive="active" class="uk-link-reset">
           {{ category.name }}
