--- a/src/app/modules/movie/components/movie-card/movie-card.component.html
+++ b/src/app/modules/movie/components/movie-card/movie-card.component.html
@@ -1,14 +1,14 @@
 <div class="movie-card" routerLink="/movie/{{ movie.id }}">
-  <!-- <div class="movie-card-img" style="background-image: url({{ movie.imageUrl }});"></div> -->
+  <div class="movie-card-img" style="background-image: url('{{ movie.attributes.imageUrl }}');"></div>
   <div class="movie-card-footer">
     <div class="movie-card-name">
-      <h3>{{ movie.name }}</h3>
+      <h3>{{ movie.attributes.name }}</h3>
     </div>
     <div class="movie-card-year">
-      <span>Year</span><span>{{ movie.year }}</span>
+      <span>Year</span><span>{{ movie.attributes.year }}</span>
     </div>
     <div class="movie-card-genre">
-      <span>Genre:</span><span>{{ movie.genre }}</span>
+      <span>Genre:</span><span>{{ movie.attributes.genre }}</span>
     </div>
   </div>
 </div>
