--- a/src/app/modules/movie/components/movie-view/movie-view.component.html
+++ b/src/app/modules/movie/components/movie-view/movie-view.component.html
@@ -1,9 +1,9 @@
 <div class="movieview-container">
   <div class="movieview">
-    <div class="movieview-image" style="background-image: url({{ movie?.imageUrl }});"></div>
+    <div class="movieview-image" style="background-image: url('{{ movie?.attributes.imageUrl }}');"></div>
     <div class="movieview-details">
       <div class="movieview-name">
-        <h1>{{ movie?.name }} ({{ movie?.year }})</h1>
+        <h1>{{ movie?.attributes.name }} ({{ movie?.attributes.year }})</h1>
       </div>
       <div style="padding: 5px 0;">
         <span>
@@ -16,19 +16,19 @@
         </span>
       </div>
       <div style="padding: 5px 0;">
-        <span> Genre: {{ movie?.genre }}</span>
+        <span> Genre: {{ movie?.attributes.genre }}</span>
       </div>
       <div style="padding: 5px 0;">
-        <span>Year: {{ movie?.year }}</span>
+        <span>Year: {{ movie?.attributes.year }}</span>
       </div>
       <div class="movieview-synopsis-cnt">
         <h2>Synopsis</h2>
-        <div class="movie-synopsis">{{ movie?.synopsis }}</div>
+        <div class="movie-synopsis">{{ movie?.attributes.synopsis }}</div>
       </div>
     </div>
   </div>
   <ng-container #vcRef></ng-container>
   <ng-template #modalRef>
-    <!-- <app-editmovie (closeDialog)="closeDialog()" [movie]="movie"></app-editmovie> -->
+    <app-edit-movie (closeDialog)="closeDialog()" [movie]="movie"></app-edit-movie>
   </ng-template>
 </div>
