--- a/src/app/modules/movie/components/edit-movie/edit-movie.component.html
+++ b/src/app/modules/movie/components/edit-movie/edit-movie.component.html
@@ -9,31 +9,31 @@
       <div class="inputField">
         <div class="label"><label>Name</label></div>
         <div>
-          <input id="addMovieName" type="text" value="{{ movie?.name }}" />
+          <input id="addMovieName" type="text" value="{{ movie?.attributes.name }}" />
         </div>
       </div>
       <div class="inputField">
         <div class="label"><label>ImageUrl</label></div>
         <div>
-          <input id="addMovieImageUrl" type="text" value="{{ movie?.imageUrl }}" />
+          <input id="addMovieImageUrl" type="text" value="{{ movie?.attributes.imageUrl }}" />
         </div>
       </div>
       <div class="inputField">
         <div class="label"><label>Synopsis</label></div>
         <div>
-          <input id="addMovieSynopsis" type="text" value="{{ movie?.synopsis }}" />
+          <input id="addMovieSynopsis" type="text" value="{{ movie?.attributes.synopsis }}" />
         </div>
       </div>
       <div class="inputField">
         <div class="label"><label>Year</label></div>
         <div>
-          <input id="addMovieYear" type="text" value="{{ movie?.year }}" />
+          <input id="addMovieYear" type="text" value="{{ movie?.attributes.year }}" />
         </div>
       </div>
       <div class="inputField">
         <div class="label"><label>Genre</label></div>
         <div>
-          <input id="addMovieGenre" type="text" value="{{ movie?.genre }}" />
+          <input id="addMovieGenre" type="text" value="{{ movie?.attributes.genre }}" />
         </div>
       </div>
     </div>
