--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,6 +10,9 @@
       <li>
         <a routerLink="/movies">Movies</a>
       </li>
+      <li>
+        <a routerLink="/articles">Articles</a>
+      </li>
       <li *ngFor="let category of data.categories" class="uk-active">
         <a routerLink="/category/{{ category.id }}" routerLinkActive="active" class="uk-link-reset">
           {{ category.name }}
