--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,11 +13,14 @@
       <li>
         <a routerLink="/articles">Articles</a>
       </li>
-      <li *ngFor="let category of data.categories" class="uk-active">
+      <li>
+        <a routerLink="/countries">Countries</a>
+      </li>
+      <!-- <li *ngFor="let category of data.categories" class="uk-active">
         <a routerLink="/category/{{ category.id }}" routerLinkActive="active" class="uk-link-reset">
           {{ category.name }}
         </a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
