--- a/src/styles.scss
+++ b/src/styles.scss
@@ -162,3 +162,5 @@ input[type="text"] {
 input:active {
   border-color: rgb(0, 126, 255);
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
