--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="uk-navbar-right">
-    <ul *ngIf="data" class="uk-navbar-nav">
+    <ul *ngIf="nav" class="uk-navbar-nav">
       <li>
         <a routerLink="/movies">Movies</a>
       </li>
@@ -16,11 +16,14 @@
       <li>
         <a routerLink="/countries">Countries</a>
       </li>
-      <!-- <li *ngFor="let category of data.categories" class="uk-active">
-        <a routerLink="/category/{{ category.id }}" routerLinkActive="active" class="uk-link-reset">
-          {{ category.name }}
+      <li>
+        <a routerLink="/categories">Categories</a>
+      </li>
+      <li *ngFor="let cat of nav" class="uk-active">
+        <a routerLink="/category/{{ cat.id }}" routerLinkActive="active" class="uk-link-reset">
+          {{ cat.attributes.name }}
         </a>
-      </li> -->
+      </li>
     </ul>
   </div>
 </nav>
