--- a/src/app/modules/article/components/article-list/article-list.component.html
+++ b/src/app/modules/article/components/article-list/article-list.component.html
@@ -1,9 +1,29 @@
 <div>
   <ng-container *ngIf="data">
-    <div *ngFor="let a of data">
-      <a routerLink="/article/{{a.id}}">
-        {{a.attributes.title}}
-      </a>
-    </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Title</th>
+          <th>Content</th>
+          <th>Category</th>
+          <th>Image</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let a of data">
+          <td></td>
+          <td>{{a.attributes.title}}</td>
+          <td>{{a.attributes.content}}</td>
+          <td>{{a.attributes.category}}</td>
+          <td>{{a.attributes.image}}</td>
+          <td>
+            <a>Detail</a>
+            <a>Edit</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </ng-container>
 </div>
